--- a/mapa.html
+++ b/mapa.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="paralax.css">
+<link rel="stylesheet" type="text/css" href="style.scss">
 </head>
 <body>
   <div id="menu-wrapper">
