--- a/mapa.html
+++ b/mapa.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style.scss">
+<link rel="stylesheet" type="text/scss" href="style.scss">
 </head>
 <body>
   <div>
+	  <p>Hola guenas tarde</p>
     <ul>
       <li><a href="paralax.html" >Inicio</a></li>
       <li><a href="#">Servicios</a></li>
