--- a/mapa.html
+++ b/mapa.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
+  <nav>
 	  <p>Hola guenas tarde</p>
     <ul>
       <li><a href="paralax.html" >Inicio</a></li>
@@ -13,7 +13,8 @@
       <li><a href="#">Contacto</a></li>
        <li><a href="#">Preguntas</a></li>
     </ul>
-  </div>
+  </nav>
+	
   <div>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3172.8789080396514!2d-5.969131884816675!3d37.321695945870005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126e1e9941b38f%3A0x3c64a9e75549e52b!2sCalle+Pamplona%2C+50%2C+41014+Sevilla!5e0!3m2!1ses!2ses!4v1519339988367" frameborder="0" style="border:0; w
 	th: 100%; height: 658px;" allowfullscreen></iframe>
